--- a/examples/chart/teleport-cluster/Chart.yaml
+++ b/examples/chart/teleport-cluster/Chart.yaml
@@ -6,3 +6,13 @@ description: Teleport is a unified access plane for your infrastructure
 icon: https://goteleport.com/images/logos/logo-teleport-square.svg
 keywords:
   - Teleport
+
+dependencies:
+  - name: etcd
+    version: 8.2.0
+    condition: chartMode.custom
+    repository: https://charts.bitnami.com/bitnami
+  - name: minio
+    version: 4.0.2
+    condition: chartMode.custom
+    repository: https://charts.min.io/
